# mikrokosmos

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Environment.hs  Format.hs  Interpreter.hs  Lambda.hs  Main.hs  MultiBimap.hs  Multibimap.hs  NamedLambda.hs  README.md  arith.mkr  lambda.hs  logic.mkr  mikrokosmos.cabal  paper.bib  paper.md  stack.yaml  std.mkr  test.mkr  tests.hs
docs/: html.setup  iconlicense.md  index.html  index.org  tutorial-1-lambda.ipynb  tutorial-2-logic.ipynb  tutorial-3-numbers.ipynb  tutorial-4-combinators.ipynb  tutorial-5-datastructures.ipynb  tutorial-6-recursion.ipynb  tutorial-7-types.ipynb  tutorial.html  tutorial.ipynb  tutorial.org  userguide.html  userguide.org
docs/haddock/: Environment.html  Format.html  Interpreter.html  Lambda.html  Libraries.html  Main.html  MultiBimap.html  NamedLambda.html  Ski.html  Stlc-Block.html  Stlc-Gentzen.html  Stlc-Types.html  Types.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  index.html  mikrokosmos.haddock  mini_Environment.html  mini_Format.html  (+11 more)
docs/haddock/src/: Environment.html  Format.html  Interpreter.html  Lambda.html  Libraries.html  Main.html  MultiBimap.html  NamedLambda.html  Ski.html  Stlc.Block.html  Stlc.Gentzen.html  Stlc.Types.html
docs/styles/: mikrocode.css
docs/styles/bigblow/css/: bigblow.css  hideshow.css
docs/styles/bigblow/js/: hideshow.js
docs/styles/readtheorg/: readme.org
docs/styles/readtheorg/css/: readtheorg.css
lib/: arithmetic.mkr  basic.mkr  datastructures.mkr  fixpoint.mkr  logic.mkr  nat.mkr  prettynat.mkr  ski.mkr  std.mkr  types.mkr
paper/: codemeta.json  paper.bib  paper.md  readme.org
source/: Block.hs  Environment.hs  Format.hs  Gentzen.hs  Interpreter.hs  Lambda.hs  Libraries.hs  Main.hs  NamedLambda.hs  Ski.hs  Tests.hs  Types.hs
source/Stlc/: Block.hs  Gentzen.hs  Types.hs
tests/: test.hs  testing.golden  testing.mkr
