name:                mikrokosmos
version:             0.1.0
synopsis:            Lambda calculus interpreter
description:         A didactic untyped lambda calculus interpreter.
license:             GPL-3
license-file:        LICENSE
author:              Mario Román (M42)
maintainer:          mromang08+github@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable mikrokosmos
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       mtl >=2.2 && <2.3,
                       containers >=0.5 && <0.6,
                       haskeline >=0.7 && <0.8,
                       parsec >=3.1 && <3.2,
                       ansi-terminal >=0.6 && <0.7,
                       multimap >=1.2 && <1.3,
                       HUnit >=1.2 && <1.3

  default-language:    Haskell2010