name:                mikrokosmos
version:             0.2.0
synopsis:            Lambda calculus interpreter
description:         A didactic untyped lambda calculus interpreter.
homepage:            https://github.com/M42/mikrokosmos
bug-reports:         https://github.com/M42/mikrokosmos/issues
license:             GPL-3
license-file:        LICENSE
author:              Mario Román (M42)
maintainer:          mromang08+github@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1
extra-source-files:  std.mkr
                                          
source-repository head
  type:           git
  location:       git://github.com/M42/mikrokosmos.git


                       
executable mikrokosmos
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       mtl >=2.2,
                       containers >= 0.5,
                       haskeline >=0.7,
                       parsec >=3,
                       ansi-terminal,
                       multimap,
                       HUnit >=1.0
                       
  other-modules:       Format
                       Lambda
                       NamedLambda
                       MultiBimap
                       Interpreter
                       
  default-language:    Haskell2010
  ghc-options:         -Wall