name:                mikrokosmos
version:             0.8.0
synopsis:            Lambda calculus interpreter
description:         A didactic untyped lambda calculus interpreter.
homepage:            https://github.com/mroman42/mikrokosmos
bug-reports:         https://github.com/mroman42/mikrokosmos/issues
license:             GPL-3
license-file:        LICENSE
author:              Mario Román (mroman42)
maintainer:          mromang08+github@gmail.com
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.2
                                          
source-repository head
  type:           git
  location:       git://github.com/mroman42/mikrokosmos.git


                       
executable mikrokosmos
  hs-source-dirs:      ./source
  main-is:             Main.hs
  build-depends:       base >=4.7 && <5,
                       mtl >=2.2,
                       containers >= 0.5,
                       haskeline >=0.7,
                       parsec >=3,
                       ansi-terminal,
                       multimap,
                       HUnit >=1.0,
                       options,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       tasty-golden,
                       directory >= 1.0
                       
  other-modules:       Format
                       Lambda
                       NamedLambda
                       MultiBimap
                       Interpreter
                       Environment
                       Ski
                       Libraries
                       Stlc.Types
                       Stlc.Gentzen
                       Stlc.Block
                       
  default-language:    Haskell2010
  ghc-options:         -Wall


test-suite test
  default-language:
    Haskell2010
  type:
    exitcode-stdio-1.0
  hs-source-dirs: tests
                  source
  main-is:
    test.hs
    
  build-depends: base >=4.7 && <5,
                 mtl >=2.2,
                 containers >= 0.5,
                 haskeline >=0.7,
                 parsec >=3,
                 ansi-terminal,
                 multimap,
                 HUnit >=1.0,
                 options,
                 tasty,
                 tasty-hunit,
                 tasty-golden,
                 tasty-quickcheck,
                 directory >= 1.0,
                 process
                 
  other-modules: Format
                 Lambda
                 NamedLambda
                 MultiBimap
                 Interpreter
                 Environment
                 Ski
                 Libraries
                 Stlc.Types
                 Stlc.Gentzen
                 Stlc.Block
                 
